# DOOM-3-BFG

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: cpm.cmake  dependencies.cmake  helper_targets.cmake
doomclassic/: CMakeLists.txt
doomclassic/doom/: Precompiled.h  doomlib.h  doomtype.h  m_misc.cpp
doomclassic/timidity/: CMakeLists.txt
neo/: .gitignore  CMakeLists.txt  CMakePresets.json
neo/TypeInfo/: CMakeLists.txt  main.cpp
neo/d3xp/: CMakeLists.txt
neo/d3xp/ai/: AI_Vagary.cpp  AI_Vagary.h  AI_events.cpp
neo/d3xp/gamesys/: Class.cpp  Class.h  Event.cpp  Event.h
neo/d3xp/menus/: MenuScreen_HUD.cpp  MenuWidget_CommandBar.cpp
neo/d3xp/script/: Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.cpp
neo/framework/: Common.cpp  Common_printf.cpp  File.cpp  KeyInput.cpp
neo/idlib/: CMakeLists.txt  Heap.cpp  ParallelJobList_JobHeaders.h  SoftwareCache.cpp  Str.cpp
neo/idlib/math/: MatX.cpp  Simd.cpp  Simd_SSE.cpp  VecX.cpp
neo/idlib/sys/: sys_assert.cpp  sys_defines.h  sys_includes.h  sys_intrinsics.h  sys_threading.h  sys_types.h
neo/idlib/sys/posix/: posix_thread.cpp
neo/renderer/: RenderSystem_init.cpp
neo/renderer/OpenGL/: qgl.h
neo/sound/: SoundHardware.h  SoundSample.h  SoundVoice_include.h  snd_local.h
neo/sound/FAudio/: FAudio_SoundHardware.cpp  FAudio_SoundHardware.h  FAudio_SoundSample.cpp  FAudio_SoundSample.h  FAudio_SoundVoice.cpp  FAudio_SoundVoice.h
neo/sound/stub/: stub_SoundHardware.cpp  stub_SoundHardware.h  stub_SoundSample.cpp  stub_SoundSample.h  stub_SoundVoice.cpp  stub_SoundVoice.h
neo/sys/: Snapshot_Jobs.cpp  sys_public.h
neo/sys/posix/: posix_FilePermanent.cpp  posix_FileSystem.cpp  posix_shared.cpp
neo/sys/sdl/: sdl_input.cpp  sdl_input.h  sdl_local.h  sdl_main.cpp  sdl_shared.cpp  sdl_syscon.cpp
neo/sys/stub/: stub_cpu.cpp  stub_glimp.cpp  stub_input.cpp  stub_input.h  stub_local.h  stub_localuser.cpp  stub_localuser.h  stub_main.cpp  stub_net.cpp  stub_qgl.cpp  stub_savegame.cpp  stub_signin.cpp  stub_signin.h  stub_syscon.cpp
neo/sys/win32/: win_FilePermanent.cpp  win_cpu.cpp  win_main.cpp  win_shared.cpp
neo/ui/: SimpleWindow.cpp  Window.cpp  Window.h
